Rewrite EP56–EP66 as continuous spoken JVM lessons
Replace template section dumps with necessity-driven narration matching
EP01/04/07 technique: situation → problem → concept → integrated examples
→ misconceptions woven in → natural bridge to the next episode.

Co-authored-by: ANKUR KUMAR <ankur0001@users.noreply.github.com>