@@ -5,162 +5,45 @@
 | Episode | 62 |
 | Title | JVM Flags and Tuning |
 | Catalog handbook column | 62 |
-| Narration source script | Descriptive instructor narration (4–15 min) |
-| Spoken form | Connected explanatory prose with walked-through examples |
+| Spoken form | Continuous spoken lesson (narrative chain of thought) |
 | Runtime target | **4–15 minutes** (aim ~10–12) |
 
 ## Full narration
 
-### Opening — start with a problem
+By now you know collectors, leaks, dumps, escape analysis, and memory beyond the heap. So someone pastes a twenty-flag command line into your deployment manifest and says "this is how we tune Java." That paste is not a strategy. It is an heirloom. Nobody remembers which incident invented half the flags. Nobody knows which ones still matter on the current JDK. Today's episode is about treating flags as experiments: change one variable, measure against SLOs, document why the flag exists, and delete it when it stops earning its keep.
 
-In the previous episode, we worked through **Reference Types**. That gave us a piece of the platform. Today we need the next piece: **JVM Flags and Tuning**.
-
-We are continuing The Java Story, and today's challenge is JVM Flags and Tuning. The goal is not to memorize a definition — it is to understand a problem Java is trying to help us solve.
-
-Flags are experiments — change one variable, measure against SLOs.
-
-I am not going to rush through slogans. We will introduce the idea in context, explain why it exists, look at Java code, walk through that code, and only then move on.
-
-### Why this exists
-
-In simple language, jvm flags and tuning is a tool for a recurring design problem. If we ignore that problem, we can still write code for a while — and then the cost shows up as duplication, fragile APIs, runtime surprises, or code that only the original author understands.
-
-A helpful picture: Picture JVM Flags and Tuning clearly.
-
-Hold that picture lightly. We will come straight back to Java so the analogy clarifies the mechanism instead of replacing it.
-
-### Building the idea step by step
-
-#### Step 1
-
-Now consider this teaching point: Set heap intentionally.
-
-This is usually the first thing you need in your mental model. If this step is fuzzy, the later details will feel like trivia.
-
-Say it back in your own words before we look at code. If you can explain the 'why', the syntax becomes much easier to remember.
-
-#### Step 2
-
-Now consider this teaching point: Enable GC logging.
-
-Notice how this extends the previous step. We are not collecting disconnected facts — we are assembling a mechanism.
-
-Say it back in your own words before we look at code. If you can explain the 'why', the syntax becomes much easier to remember.
-
-#### Step 3
-
-Now consider this teaching point: Prefer evidence over folklore.
-
-Ask yourself: if we skipped this detail, what bug or design smell would become more likely?
-
-Say it back in your own words before we look at code. If you can explain the 'why', the syntax becomes much easier to remember.
-
-#### Step 4
-
-Now consider this teaching point: Document why a flag exists.
-
-Ask yourself: if we skipped this detail, what bug or design smell would become more likely?
-
-Say it back in your own words before we look at code. If you can explain the 'why', the syntax becomes much easier to remember.
-
-#### Step 5
-
-Now consider this teaching point: Remove flags that no longer earn their keep.
-
-This last point is often where beginners and experienced developers separate. Tutorials mention it. Production work depends on it.
-
-Say it back in your own words before we look at code. If you can explain the 'why', the syntax becomes much easier to remember.
-
-### Example 1 — the smallest useful illustration
-
-Let's start with the smallest example that still teaches the real idea. Read it slowly. Every line is doing work.
+Begin with intention, not folklore. Set the heap on purpose. A stable heap sizing story — often `-Xms` equal to `-Xmx` for server processes that should not spend time resizing up and down — is a decision you can explain in a design review. Pair it with a collector you chose for reasons from Episode Fifty-Six, and turn on GC logging so the decision can be audited:
 
 ```bash
 java -Xms512m -Xmx512m -XX:+UseG1GC -Xlog:gc*:file=gc.log -jar app.jar
 ```
 
-Why is this code here? Because an abstract definition is easy to nod at and hard to use. The example forces the idea into a concrete shape.
+That line is not "fully tuned." It is observable. Without logs and without metrics under realistic load, the rest of the flag list is costume jewelry. Prefer evidence over folklore. If p99 latency fails under load, read GC pauses, allocation rate, heap occupancy, CPU steal, and queue depth. Form a hypothesis that names a mechanism. Change one thing. Remeasure. That loop is tuning. Copying a blog's ZGC flags because the title said "ultimate performance" is not tuning. It is cosplay.
 
-Walk this like pair-programming.
+Document why a flag exists. Future you will not remember that `-XX:SomethingObscure` was added during a Black Friday incident three years ago. A comment in the deployment manifest, a line in the runbook, a note in the pull request — anything that ties flag to symptom and proof. Remove flags that no longer earn their keep. Leaving debug flags, ultra-verbose logging, or experimental options on forever creates overhead, noise, and false confidence. A flag that once saved you can later cost you without anyone noticing, because nobody owned the experiment's end date.
 
-Focus on what each line means.
+Cargo-cult lists fail in predictable ways. A flag that helped a four-gigabyte heap may hurt a five-hundred-megabyte container. A flag that helped Java 11 may be default, renamed, or irrelevant on Java 21. A flag that reduced pauses may increase CPU until autoscaling costs explode. Tuning without load tests guarantees you are optimizing for a machine that is not production — often your laptop, often with polite traffic. The first tuning step in an interview answer should sound boring and correct: gather metrics and GC logs under realistic load, then change one variable against an explicit SLO. If you cannot name the SLO, you are not ready to name the flag.
 
-Connect to the failure mode.
+Notice how this episode does not try to memorize every `-XX`. The catalog is large and version-dependent. What transfers is the discipline: intentional heap, visible GC behavior, evidence, documentation, cleanup. When a vendor or a senior engineer suggests a flag, your questions are "what symptom?", "what measurement changed?", and "how do we know to revert?" If those answers are missing, the flag is a rumor with a dash prefix.
 
-Look at `java -Xms512m -Xmx512m -XX:+UseG1GC -Xlog:gc*:file=gc.log -jar app.jar`.
+We turned flags from magic words into a scientific habit. Zoom in further: sometimes the "memory problem" is not GC policy but the shape of objects themselves — headers, padding, compressed oops. Episode Sixty-Three is object layout, and it explains why a "tiny" object is never as tiny as its fields suggest.
 
-Ask what would break if this line were missing, mistyped, or replaced with a 'simpler' shortcut. That question turns syntax into understanding.
+Make the experiment loop tactile. Baseline: p99 is 180ms under a load test that mirrors production mix. GC log shows mixed collections with 40ms pauses. Hypothesis: heap is too small for the live set plus allocation burst, causing frequent mixed collections. Change: raise `-Xmx`/`-Xms` together by a measured step, keep the collector constant. Remeasure. If p99 drops and pauses calm, you learned something. If nothing changes, revert and form a new hypothesis — maybe the latency is lock contention, and JFR would have said so. Changing five flags at once would have taught you nothing either way.
 
-After this example, you should be able to point to the code and explain what problem each important line is solving.
+Folklore has favorite spells. `-XX:+AggressiveOpts` from an ancient blog. Huge thread stack sizes copied from a desktop recipe. GC ratio flags that do not match your collector. Leaving `-Xlog:gc*=debug` on forever in production until disks fill. Each of these fails the documentation test: there is no symptom, no measurement, no revert plan. Prefer a short, owned flag list to a long, inherited one.
 
-### Example 2 — make it more realistic
+Make the experiment loop tactile. Baseline: p99 is 180ms under a load test that mirrors production mix. GC log shows mixed collections with 40ms pauses. Hypothesis: heap is too small for the live set plus allocation burst, causing frequent mixed collections. Change: raise `-Xmx`/`-Xms` together by a measured step, keep the collector constant. Remeasure. If p99 drops and pauses calm, you learned something. If nothing changes, revert and form a new hypothesis — maybe the latency is lock contention, and JFR would have said so. Changing five flags at once would have taught you nothing either way.
 
-The first example isolates the concept. Real applications rarely stop there. In a practical setting, JVM Flags and Tuning usually appears while you are trying to ship a feature under constraints: correctness, readability, and change over time.
+Folklore has favorite spells. `-XX:+AggressiveOpts` from an ancient blog. Huge thread stack sizes copied from a desktop recipe. GC ratio flags that do not match your collector. Leaving `-Xlog:gc*=debug` on forever in production until disks fill. Each of these fails the documentation test: there is no symptom, no measurement, no revert plan. Prefer a short, owned flag list to a long, inherited one.
 
-So extend the idea: once the basic form works, ask what happens when the input is larger, the call sites multiply, or another teammate must maintain the code next month.
+Also separate "supportability flags" from "performance flags." GC logging and JFR configuration are often worth keeping because they make the next incident cheaper. Random micro-tuning flags are the ones that must continually earn their keep against SLOs.
 
-A useful habit is to take the small example and place it inside a tiny scenario — a checkout flow, a student record, a background job, a service boundary — whichever fits the topic. The concept should still be visible, but now it has a reason to exist in a product.
+Also separate "supportability flags" from "performance flags." GC logging and JFR configuration are often worth keeping because they make the next incident cheaper. Random micro-tuning flags are the ones that must continually earn their keep against SLOs.
 
-When you rewrite the example in that scenario, keep the same mechanism. Do not invent a new idea. You are proving that the same Java tool still works when the story gets closer to production.
+## Source attribution
 
-### What if we skip this approach?
+Reference: `Java_JVM_Handbook_GPT55__1_.html` — JVM Flags and Tuning (Episode 62).
 
-Important concepts become memorable when we see the failure mode without them.
+Narration technique: cargo-cult paste → flags as experiments → intentional heap + GC log command → evidence loop → document/remove → misconceptions → interview woven → bridge to object layout.
 
-For example, consider this common mistake: Cargo-cult flag lists.
-
-That mistake is attractive because it feels shorter or more familiar. The cost arrives later: a subtle bug, a painful refactor, or an incident that is hard to diagnose.
-
-This is the 'what if?' test. If removing the concept makes dangerous behavior easy, then the concept is earning its place in the language or the standard library.
-
-### Example 3 — a common misunderstanding
-
-**Misunderstanding 1:** Cargo-cult flag lists.
-
-When you see this in a code review, do not only say 'that is wrong.' Explain the mechanism. Show the safer pattern. Connect it back to the reason the feature exists.
-
-**Misunderstanding 2:** Tuning without load tests.
-
-When you see this in a code review, do not only say 'that is wrong.' Explain the mechanism. Show the safer pattern. Connect it back to the reason the feature exists.
-
-**Misunderstanding 3:** Leaving debug flags on forever.
-
-When you see this in a code review, do not only say 'that is wrong.' Explain the mechanism. Show the safer pattern. Connect it back to the reason the feature exists.
-
-If you can diagnose the misunderstanding, you are no longer memorizing — you are teaching yourself to design.
-
-### Interview-style checkpoint
-
-Question: First tuning step?
-
-Answer in spoken form: Metrics + GC logs under realistic load.
-
-Then add one sentence about a trade-off or failure mode. That extra sentence is what makes the answer sound like experience instead of a flashcard.
-
-### Connecting the thread
-
-We came from **Reference Types**. That set up a need. **JVM Flags and Tuning** is one of Java's answers to that need.
-
-You should now be able to say why the idea exists, how a small Java example works, where you would use it, and what people often get wrong.
-
-### Looking ahead
-
-Once this is solid, a new challenge appears. That challenge leads us to **Object Layout**.
-
-We will start there the same way: with a problem, then the reason Java's approach exists, then code we can walk through together.
-
-## Source attribution (reference document)
-
-Reference document (user attachment): **`Java_JVM_Handbook_GPT55__1_.html`** — *Java & JVM Handbook — 80 Lessons*.
-
-- **Primary curriculum mapping:** Episode 62 / **JVM Flags and Tuning** (see `../reference/EPISODE_CATALOG.md` and handbook TOC notes for any remaps).
-- **How content was used:** Handbook/curriculum provided the topic spine and teaching points. Narration was rewritten as **descriptive, example-driven instructor prose** (Introduce → Explain → Illustrate → Code → Walk Through → Question → Extend → Connect), not short disconnected definitions.
-- **Runtime note:** Aimed at a **4–15 minute** lesson (soft aim ~10–12).
-
-### Teaching points drawn from the topic bank
-
-- Set heap intentionally.
-- Enable GC logging.
-- Prefer evidence over folklore.
-- Document why a flag exists.
-- Remove flags that no longer earn their keep.
+Teaching points preserved: set heap intentionally; GC logging; evidence over folklore; document flags; remove stale flags.
